test/files/pos/t5013/Foo_1.scala
package a

class Foo {
  protected[Foo] var x = 0
}
