test/files/neg/t4537/a.scala
package a

private[a] object Settings {
  val X = 0
}